--- a/src/Header/Header1.css
+++ b/src/Header/Header1.css
@@ -7,6 +7,7 @@
 }
 
 .Header1Container {
+    width: 95%;
     background-color: #f1f7f7;
     padding-left: 8%;
     padding-right: 8%;
@@ -56,3 +57,5 @@
     width: 60%;
 
 }
+
+
