--- a/src/Header/Header1.css
+++ b/src/Header/Header1.css
@@ -7,7 +7,6 @@
 }
 
 .Header1Container {
-    width: 95%;
     background-color: #f1f7f7;
     padding-left: 8%;
     padding-right: 8%;
@@ -59,3 +58,30 @@
 }
 
 
+@media (min-width : 1023px ) {
+    .Header1Container {
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+   
+    .supportlanguageUl , .connectUL {
+       
+        column-gap: 20px;
+       
+     }
+}
+
+@media (min-width : 834px ) {
+    .supportlanguagecontainer{
+        margin-left: 17%;
+    }
+  
+}
+
+@media (min-width : 768px ) {
+   
+}
+
+@media (min-width : 480px ) {
+  
+}
