--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -103,3 +103,25 @@
     cursor: pointer;
 
 }
+
+
+@media (min-width : 1023px ) {
+    .imagehome{
+        width: 100%;
+    }
+}
+
+@media (min-width : 834px ) {
+  
+    .imagehome{
+        width: 100%;
+    }
+}
+
+@media (min-width : 768px ) {
+   
+}
+
+@media (min-width : 480px ) {
+  
+}
