--- a/src/TravelSupport/TravelSupport.css
+++ b/src/TravelSupport/TravelSupport.css
@@ -66,3 +66,28 @@
     padding-bottom: 2px;
     margin-bottom: -40%;
     }
+
+
+    
+
+@media (min-width : 1023px ) {
+   
+   
+ }
+ 
+ @media (min-width : 834px ) {
+    .travelsupportinfoconatiner{
+      
+        padding-left: 6%;
+    }
+ }
+ 
+ @media (min-width : 768px ) {
+   
+ }
+ 
+ @media (min-width : 480px ) {
+  
+ }
+ 
+ 
