--- a/src/Header/Header1.css
+++ b/src/Header/Header1.css
@@ -57,6 +57,10 @@
 
 }
 
+.connectUL li {
+    width: max-content;
+}
+
 
 @media (min-width : 1023px ) {
     .Header1Container {
@@ -82,6 +86,24 @@
    
 }
 
-@media (min-width : 480px ) {
+@media (max-width : 480px ) {
+    .gridicon{
+        width: 20px;
+        height: 20px;
+    }
+    
+    .supportlanguageUl , .connectUL  {
+       column-gap: 10px;
+       font-size: 7px;
+    }
+    .supportlanguageUl{
+        margin-right: 15%;
+    }
+    .connectUL {
+        column-gap: 5px;
+      
+    }
+
   
+ 
 }
