--- a/src/Header/Header2.css
+++ b/src/Header/Header2.css
@@ -8,7 +8,9 @@
     width: 100px;
 }
 
-
+.menuicon{
+   display: none;
+}
 .navigationUL{
     
     list-style: none;
@@ -43,13 +45,13 @@
 
  }
 
+
  
 
 @media (min-width : 1023px ) {
    .navbar{
       padding-left: 1%;
       padding-right: 1%;
-      width: 100%;
   }
   .navigationUL{
   
@@ -59,19 +61,57 @@
   
 }
 
-@media (min-width : 834px ) {
+@media (max-width : 871px ) {
+   .menuicon{
+      display: flex;
+      width: 30px;
+      height: 30px;
+      color: #73777b;
+      cursor: pointer;
+   }
    .navigationUL{
-  
-      column-gap: 30px;
-     
+      display: none;
+   }
+   .navigationUL2{
+      display: flex;
+      flex-direction: column;
+      width: max-content;
+      text-align: left;
+      position: absolute;
+      z-index: 1;
+      margin-left: 35%;
+      column-gap: 0px;
+      row-gap: 20px;
+      font-size: 20px;
+      background-color: white;
+      padding: 0;
+   }
+
+   .navigationUL2 li{
+      position: relative;
+      width: 100%;
+      height: 35px;
+      padding: 0px 10px 0px 10px;
+   }
+   .navigationUL2 li:hover{
+      background-color: #73777b;
+      text-decoration: none;
    }
 }
 
-@media (min-width : 768px ) {
-  
+@media (max-width : 768px ) {
+   .menuicon{
+    margin-right: 5%;
+   }
 }
 
-@media (min-width : 480px ) {
+@media (max-width : 480px ) {
+   .Contactbtn{
+      padding: 5px 12px 5px 12px;
+      font-size: 10px;
+      border-radius: 50px;
+     
+   }
  
 }
 
